--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,14 @@ composeBom = "2024.09.03"
 navigationCompose = "2.8.2"
 #LiveData
 runtimeLivedata = "1.7.3"
+#Iconos
 materialIconsExtended = "1.7.3"
+#FireBase
+firebaseBom = "33.4.0"
+#Services
+services = "4.4.2"
+#Crashlytics parte de Firebase
+crashlytics = "3.0.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -35,8 +42,18 @@ androidx-navigation-compose = { module = "androidx.navigation:navigation-compose
 androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
 #Iconos
 androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
+#Firebase
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics" }
+firebase-auth = {module = "com.google.firebase:firebase-auth-ktx" }
+    #firebase-firestore = {module= "com.google.firebase:firebase-firestore"}
+    #firebase-realtime = {module= "com.google.firebase:firebase-database-ktx"}
+    #firebase-config = {module = "com.google.firebase:firebase-config-ktx"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-
+#Services
+googleServices = { id = "com.google.gms.google-services", version.ref = "services" }
+#FireBase
+crashlytics = {id= "com.google.firebase.crashlytics", version.ref = "crashlytics"}
