--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,27 +1,40 @@
 [versions]
-agp = "8.5.2"
+agp = "8.6.1"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.6"
-activityCompose = "1.9.2"
-composeBom = "2024.09.03"
-# Navigation
-navigationCompose = "2.8.2"
+activityCompose = "1.9.3"
+composeBom = "2024.10.00"
 #LiveData
-runtimeLivedata = "1.7.3"
+runtimeLivedata = "1.7.4"
+#Navigation
+navigationCompose = "2.8.3"
 #Iconos
-materialIconsExtended = "1.7.3"
+materialIconsExtended = "1.7.4"
 #FireBase
 firebaseBom = "33.4.0"
-#Services
+##Services
 services = "4.4.2"
-#Crashlytics parte de Firebase
+##Crashlytics
 crashlytics = "3.0.2"
 
 [libraries]
+#LiveData
+androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
+#Navigation
+androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+#Iconos
+androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
+#Firebase
+firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
+#Crashlytics
+firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics" }
+#Auth
+firebase-auth = {module = "com.google.firebase:firebase-auth-ktx" }
+
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
@@ -36,24 +49,12 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
-# Navigation
-androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
-#LiveData
-androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
-#Iconos
-androidx-material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIconsExtended" }
-#Firebase
-firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "firebaseBom" }
-firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics" }
-firebase-auth = {module = "com.google.firebase:firebase-auth-ktx" }
-    #firebase-firestore = {module= "com.google.firebase:firebase-firestore"}
-    #firebase-realtime = {module= "com.google.firebase:firebase-database-ktx"}
-    #firebase-config = {module = "com.google.firebase:firebase-config-ktx"}
 
 [plugins]
-android-application = { id = "com.android.application", version.ref = "agp" }
-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 #Services
 googleServices = { id = "com.google.gms.google-services", version.ref = "services" }
 #FireBase
 crashlytics = {id= "com.google.firebase.crashlytics", version.ref = "crashlytics"}
+
+android-application = { id = "com.android.application", version.ref = "agp" }
+jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
