--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,8 @@ services = "4.4.2"
 crashlytics = "3.0.2"
 #Coroutines
 kotlinx-coroutines = "1.7.3"
+##PickerDialog
+#material3Version = "1.3.1"
 
 [libraries]
 #LiveData
@@ -41,6 +43,8 @@ firebase-firestore = {module = "com.google.firebase:firebase-firestore"}
 #Coroutines
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
+##PickerDialog
+#androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3Version" }
 
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
