--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,23 +7,23 @@ junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.9.3"
-composeBom = "2024.10.01"
+composeBom = "2024.11.00"
 #LiveData
 runtimeLivedata = "1.7.5"
 #Navigation
-navigationCompose = "2.8.3"
+navigationCompose = "2.8.4"
 #Iconos
 materialIconsExtended = "1.7.5"
 #FireBase Bom
-firebaseBom = "33.5.1"
+firebaseBom = "33.6.0"
 ##Services
 services = "4.4.2"
 ##Crashlytics
 crashlytics = "3.0.2"
 #Coroutines
 kotlinx-coroutines = "1.7.3"
-##PickerDialog
-#material3Version = "1.3.1"
+#Gson
+gson = "2.10.1"
 
 [libraries]
 #LiveData
@@ -37,14 +37,14 @@ firebase-bom = { module = "com.google.firebase:firebase-bom", version.ref = "fir
 #Crashlytics
 firebase-crashlytics = { module = "com.google.firebase:firebase-crashlytics" }
 #Auth
-firebase-auth = {module = "com.google.firebase:firebase-auth-ktx" }
+firebase-auth = { module = "com.google.firebase:firebase-auth-ktx" }
 #FireStore Database
-firebase-firestore = {module = "com.google.firebase:firebase-firestore"}
+firebase-firestore = { module = "com.google.firebase:firebase-firestore" }
 #Coroutines
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
-##PickerDialog
-#androidx-compose-material3 = { group = "androidx.compose.material3", name = "material3", version.ref = "material3Version" }
+#Gson
+gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
@@ -65,7 +65,7 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 #Services
 googleServices = { id = "com.google.gms.google-services", version.ref = "services" }
 #FireBase
-crashlytics = {id= "com.google.firebase.crashlytics", version.ref = "crashlytics"}
+crashlytics = { id = "com.google.firebase.crashlytics", version.ref = "crashlytics" }
 
 android-application = { id = "com.android.application", version.ref = "agp" }
 jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
